--- a/common/latex_preamble.tex
+++ b/common/latex_preamble.tex
@@ -35,6 +35,7 @@
 
 \lstset{ % spanish characters for listings package
 	inputencoding=latin1,
+    columns=fullflexible,
 	breaklines=true,
 	tabsize=2,
 	showstringspaces=false,
