Add configuration space images

--- a/common/bibliography.bib
+++ b/common/bibliography.bib
@@ -288,4 +288,15 @@
 }
 
 
+% Principles of Robot Motion: Theory, Algorithms, and Implementations
+@BOOK{choset2005principles,
+	author={Choset, Howie and Lynch, Kevin M. and Hutchinson, Seth and Kantor, George A. and Burgard, Wolfram and Kavraki, Lydia E. and Thrun, Sebastian},
+	title={\href{https://ieeexplore.ieee.org/servlet/opac?bknumber=6267238}{Principles of Robot Motion: Theory, Algorithms, and Implementations}}, 
+	year={2005},
+	volume={},
+	number={},
+	pages={1--625},
+	ISBN={9780262255912}
+}
+
 
