--- a/teoricas/teorica_09/src/bibliography.tex
+++ b/teoricas/teorica_09/src/bibliography.tex
@@ -1,6 +1,7 @@
 \begin{frame}
 	\frametitle{Bibliografía}
-	%\nocite{hartley2003multiple}
+	\nocite{choset2005principles}
+	
 	
 	\printbibliography
 	
