Improve path planning slides

--- a/teoricas/teorica_09/src/path_planning.tex
+++ b/teoricas/teorica_09/src/path_planning.tex
@@ -70,6 +70,18 @@
 	\end{itemize}
 \end{frame}
 
+\begin{frame}
+	\frametitle{Espacio de configuraciones}
+	
+	\begin{itemize}
+		\item Aunque el problema de planificación de movimiento es 		definido en el mundo regular, vive en otro espacio: el espacio de configuración
+		\item Una configuración de robot q es una especificación de las posiciones de todos los puntos del robot en relación con un sistema de coordenadas fijo
+		\item Por lo general, una configuración se expresa como un vector de posiciones y orientaciones
+	\end{itemize}
+
+	
+\end{frame}
+
 
 \begin{frame}
 	\frametitle{Espacio de configuraciones}
