Add configuration space

--- a/common/math_preamble.tex
+++ b/common/math_preamble.tex
@@ -89,6 +89,18 @@
 \newcommand{\linearSystemH}{\vec{H}}
 
 
+% Motion Planning slides
+\newcommand{\workSpace}{\mathcal{W}}
+\newcommand{\obstaclesSet}{\mathcal{O}}
+\newcommand{\robotInConfiguration}{\mathcal{A}}
+\newcommand{\robotConfiguration}{q}
+\newcommand{\configurationSpace}{\mathcal{C}}
+\newcommand{\freeConfigurationSpace}{\configurationSpace_{free}}
+\newcommand{\obstableConfigurationSpace}{\configurationSpace_{obs}}
+\newcommand{\startConfiguration}{\robotConfiguration_{I}}
+\newcommand{\goalConfiguration}{\robotConfiguration_{G}}
+\newcommand{\continuousPath}{\tau}
+
 % Motion model
 \newcommand{\position}{\vec{p}}
 \newcommand{\orientation}{\vec{O}}
