Add configuration space manipulator example

--- a/teoricas/teorica_09/src/path_planning.tex
+++ b/teoricas/teorica_09/src/path_planning.tex
@@ -105,11 +105,19 @@
 	
 \end{frame}
 
+\begin{frame}
+	\frametitle{Ejemplo de espacio de configuraciones}
+	
+	\begin{figure}[!h]
+		\includegraphics[width=0.8\textwidth]{images/configuration_space_manipulator.pdf}
+	\end{figure}
+	
+\end{frame}
+
 
 \begin{frame}
 	\frametitle{Espacio de configuraciones}
-	
-	
+
 	Espacio de configuraciones es el estado total del robot y el entorno, incluidas las articulaciones y/o movimiento de ruedas)
 	
 	\begin{figure}[!h]
