--- a/tps/tp3/tp3.tex
+++ b/tps/tp3/tp3.tex
@@ -50,6 +50,8 @@ Desarrollar un programa que lea un par de imágenes estéreo cualquiera y realic
 
 
 \section{Sincronización de imágenes}
+\TODO{Hacer que el driver de la TARA funcione correctamente y genere las imágenes izquierda, derecha y los camera\_info con los mimos timestamps.}
+
 Dado que el rosbag tiene las imágenes izquierda y derecha desincronizadas (diferente timestamp) debido a un bug en el driver de la cámara. Vamos a tener que sincronizar los mensajes de las imágenes utilizar el paquete \lstinline{message_filters}\footnote{\url{http://wiki.ros.org/message_filters}}. Para esto hay que 
 
 \begin{lstlisting}[style=python]
@@ -71,10 +73,6 @@ ts.registerCallback(self.callback)
 La función callback es un método del nodo con esta asignatura:
 def callback(self, left_msg, right_msg):
 \end{lstlisting}
-
-
-
-
 
 \section{Rectificación de imágenes}
 
@@ -107,18 +105,18 @@ Selecionar un detector de keypoints (FAST, ORB, SIFT, SURF, GFTT, BRISK, etc.) y
 Realizar la búsqueda de correspondencias entre los feature de ambas imágenes (\emph{matching}). Para esto se debe utilizar la función \lstinline{cv::BFMatcher::BFMatcher()}. 
 
 \section{Triangulación de puntos 3D}
-Dadas las correspondencia visuales (\emph{matches}) obtenidas en el paso anterior, realizar la triangulación de los features detectados utilizando la función \lstinline{cv::sfm::triangulatePoints()}.
+Dadas las correspondencias visuales (\emph{matches}) obtenidas en el paso anterior, realizar la triangulación de los features detectados utilizando la función \lstinline{cv::sfm::triangulatePoints()}. Para la visualización de la nube de puntos 3D se puede publicar un mensaje de tipo \lstinline{sensor_msgs/PointCloud2}\footnote{\url{http://docs.ros.org/en/melodic/api/sensor_msgs/html/msg/PointCloud2.html}} y hacer uso de RViz.
 
 \section{Filtrado de correspondencias espúreas}
-Aplicar RANSAC (\emph{Random sample consensus}) para filtrar los matches espúreos y computar la Matríz Fundamental. Para esto puede utilizar la función \lstinline{cv::findHomography()}.
+Aplicar RANSAC (\emph{Random sample consensus}) para filtrar los matches espúreos y computar la Matríz Fundamental. Para esto puede utilizar la función \lstinline{cv::findHomography()}. Para verificar el impacto del filtrado, visualizar los matches entre las imágenes nuevamente como en la nube de puntos 3D generada.
 
 \section{Computar el mapa de disparidad}
-Computar el mapa de disparidad con las librerías utilizando la función \lstinline{cv::StereoMatcher::compute()}. Opcionalmente para tener mejores resultados puede utilizar la librería LIBELAS\footnote{\url{http://www.cvlibs.net/software/libelas/}}.
+Computar el mapa de disparidad con las librerías utilizando la función \lstinline{cv::StereoMatcher::compute()}. Opcionalmente para tener mejores resultados puede utilizar la librería LIBELAS\footnote{\url{http://www.cvlibs.net/software/libelas/}}. Visualizar el mapa de disparidad.
 
 \section{Reconstrucción 3D densa}
-Utilizando el mapa de disparidad obtenido en el paso anterior realizar una reconstrucción densa de la escena observada utilizando la función \lstinline{cv::reprojectImageTo3D()}. Para esto debe utilizar la matríz de reproyección Q retornada por la función \lstinline{cv::stereoRectify()}.
+Utilizando el mapa de disparidad obtenido en el paso anterior realizar una reconstrucción densa de la escena observada utilizando la función \lstinline{cv::reprojectImageTo3D()}. Para esto debe utilizar la matríz de reproyección Q retornada por la función \lstinline{cv::stereoRectify()}. Visualizar la nube de puntos 3D.
 
 \section{Estimación de pose Monocular}
-Utilizando \lstinline{cv::recoverPose()} estimar la transformación entre la imagen izquierda y la imagen derecha. Para esto deberá calcular la matríz esencial utilizando la función \lstinline{cv::findEssentialMat()}.
+Utilizando \lstinline{cv::recoverPose()} estimar la transformación entre la imagen izquierda y la imagen derecha. Para esto deberá calcular la matríz esencial utilizando la función \lstinline{cv::findEssentialMat()}. Visualizar la trayectoria realizada por la cámara.
 
 \end{document}
