Improve motion planning slides

--- a/teoricas/teorica_09/src/path_planning.tex
+++ b/teoricas/teorica_09/src/path_planning.tex
@@ -114,6 +114,26 @@
 	
 \end{frame}
 
+\begin{frame}
+    \frametitle{Discretización de C-Space}
+    
+    \begin{itemize}
+    \item El terreno continuo necesita ser discretizado para la planificación de caminos
+    \item Hay dos enfoques generales para discretizar C-Space:
+        \begin{itemize}
+        \item {\bf Combinatorial planning}
+        
+        Caracteriza $\freeConfigurationSpace$ explícitamente al capturar el conectividad de $\freeConfigurationSpace$ en un gráfico y encuentra soluciones usando búsqueda
+        
+        \item {\bf Sampling-based planning}
+        
+            Utiliza la detección de colisiones para sondear y buscar incrementalmente el C-Space para una solución
+        \end{itemize}
+    \end{itemize}
+
+    
+\end{frame}
+
 
 \begin{frame}
 	\frametitle{Espacio de configuraciones}
