rename motion planning file

--- a/teoricas/teorica_09/slides.tex
+++ b/teoricas/teorica_09/slides.tex
@@ -30,8 +30,8 @@
 	% add title page
 	\frame{\titlepage}
 	
-	\section{Path Planning}
-	\input{src/path_planning.tex}
+	\section{Motion Planning}
+	\input{src/motion_planning.tex}
 	
 	\section{Bibliografía}
 	\input{src/bibliography.tex}
