--- a/tps/final/final.tex
+++ b/tps/final/final.tex
@@ -52,6 +52,9 @@
 	
 	\section{Experimentación con dataset y robot}
 	\begin{itemize}
+        
+        \item (Opcional) Comenzar a trabajar con datos simulados en gazebo o algún dataset del estado del arte.
+        
 		\item Grabar un dataset con los sensores seleccionados utilizando el robot Create 3 provisto por la cátedra. Estos datos serán los utilizados para el desarrollo del sistema. El dataset debera contar con ground-truth de localización, es decir, contar con la localización real del robot. El ground-truth será utilizado para comparar la localización estimada por el sistema de localización desarrollado. Para el ground-truth se puede utilizar el paquete \lstinline{ros2_aruco}\footnote{\url{https://github.com/JMU-ROBOTICS-VIVA/ros2_aruco}}. 
 		
 		\item Realizar experimentos con el robot Create 3 provisto por la cátedra.
