Improve tp final

--- a/tps/final/final.tex
+++ b/tps/final/final.tex
@@ -22,6 +22,7 @@
 	
 	
 	\section{Temas}
+    El tema a realizar debe ser acordado con la cátedra y no debe ser el mismo que el de otro grupo. Los temas posibles son:    
 	\begin{itemize}
 		
 		\item Implementación de \emph{Iterative Closest Point} (ICP) utilizando sensor LiDAR o RGB-D
