Add path and trajectoy definitions

--- a/common/math_preamble.tex
+++ b/common/math_preamble.tex
@@ -100,6 +100,9 @@
 \newcommand{\startConfiguration}{\robotConfiguration_{I}}
 \newcommand{\goalConfiguration}{\robotConfiguration_{G}}
 \newcommand{\continuousPath}{\tau}
+\newcommand{\motionLaw}{\gamma}
+\newcommand{\robotActionSpace}{\mathcal{U}}
+
 
 % Motion model
 \newcommand{\position}{\vec{p}}
