Improve motion planning slides

--- a/common/math_preamble.tex
+++ b/common/math_preamble.tex
@@ -97,6 +97,7 @@
 \newcommand{\configurationSpace}{\mathcal{C}}
 \newcommand{\freeConfigurationSpace}{\configurationSpace_{free}}
 \newcommand{\obstableConfigurationSpace}{\configurationSpace_{obs}}
+\newcommand{\goalSet}{\configurationSpace_{goal}}
 \newcommand{\startConfiguration}{\robotConfiguration_{I}}
 \newcommand{\goalConfiguration}{\robotConfiguration_{G}}
 \newcommand{\continuousPath}{\tau}
