Add motion planning cspace image

--- a/teoricas/teorica_09/src/motion_planning.tex
+++ b/teoricas/teorica_09/src/motion_planning.tex
@@ -192,6 +192,19 @@
 \end{frame}
 
 \begin{frame}
+    \frametitle{Espacio de configuraciones}
+    
+    \begin{figure}[!h]
+        \includegraphics[width=0.2\textwidth]{images/motion_planning_geometrical_example.pdf}
+    \end{figure}
+
+    \begin{figure}[!h]
+        \includegraphics[width=0.2\textwidth]{images/motion_planning_cspace_example.pdf}
+    \end{figure}
+    
+\end{frame}
+
+\begin{frame}
 	\frametitle{Espacio de configuraciones}
 	
 	\begin{figure}[!h]
